syntax = "proto3";

option go_package = "nem/idl/gen";
option java_multiple_files = true;
option java_package = "github.com/nuzur/nem";
option java_outer_classname = "DataChangeTypeConfigUpdate";

package nem;


import "data_change_field_value.proto";
import "google/protobuf/timestamp.proto";

message DataChangeTypeConfigUpdate {  
    string entity_uuid = 1;
    string field_uuid = 2;
    string current_value = 3;
    string new_value = 4;
    repeated DataChangeFieldValue keys = 5;
    google.protobuf.Timestamp created_at = 6;    
}
